objects/OUV_Damage_Disclosure__c.object
<CustomObject>
    <label>OUV Damage Disclosure</label>
    <nameField>
        <displayFormat>DD-{0000000}</displayFormat>
        <label>OUV Damage Disclosure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Damage Disclosures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>OUV_Vehicle__r.OUV_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_VIN__c</fullName>
        <formula>OUV_Vehicle__r.OUV_FullVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Code__c</fullName>
        <label>Damage Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>B</fullName>
                    <label>B: Broken</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>BE: Bent</label>
                </value>
                <value>
                    <fullName>BL</fullName>
                    <label>BL: Bird Lime</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <label>BR: Broken</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C: Chip</label>
                </value>
                <value>
                    <fullName>CH</fullName>
                    <label>CH: Chip</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>CO: Contamination</label>
                </value>
                <value>
                    <fullName>CR</fullName>
                    <label>CR: Cracked</label>
                </value>
                <value>
                    <fullName>CU</fullName>
                    <label>CU: Cut</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D: Dent</label>
                </value>
                <value>
                    <fullName>DR</fullName>
                    <label>DR: Dirty</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>G: Glass</label>
                </value>
                <value>
                    <fullName>GU</fullName>
                    <label>GU: Gouge</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>I: Dirty Interior</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>M: Missing</label>
                </value>
                <value>
                    <fullName>PU</fullName>
                    <label>PU: Punctured</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>R: Rail Dust</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>S: Scratch</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>T: Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damage_Date__c</fullName>
        <label>Damage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle__c</fullName>
        <label>OUV Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>OUV Damage Disclosures</relationshipLabel>
        <relationshipName>OUV_Damage_Disclosures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Repair_Cost__c</fullName>
        <label>Repair Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repair_Date__c</fullName>
        <label>Repair Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Code__c</fullName>
        <label>Position Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>1: Front Bumper LHS</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>2: Front Valence LHS</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>3: Front Wing LHS</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>4: Front Wheel Arch LHS</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>5: Front Wheel OR Wheel Trim LHS</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>6: Front Tyre LHS</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>7: Door Mirror LHS</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>8: Interior</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>9: Front Door LHS</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>10: Front Door Grill LHS</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>11: Rear Door LHS(and centre pillar 4 door only)</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>12: Rear Door Grill LHS</label>
                </value>
                <value>
                    <fullName>013</fullName>
                    <label>13: Rear Wheel Arch LHS</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>14: Rear Wheel or Wheel Trim LHS</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>15: Rear Tyre LHS</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>16: Rear Quarter Panel LHS</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>17: Rear Bumper LHS</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>18: Rear Valence LHS</label>
                </value>
                <value>
                    <fullName>019</fullName>
                    <label>19: Rear Valence</label>
                </value>
                <value>
                    <fullName>020</fullName>
                    <label>20: Rear Bumper</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>21: Back Panel</label>
                </value>
                <value>
                    <fullName>022</fullName>
                    <label>22: Tail Light Cluster LHS</label>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>23: Tail Light Cluster RHS</label>
                </value>
                <value>
                    <fullName>024</fullName>
                    <label>24: Rear Window Surround/Boot Lid</label>
                </value>
                <value>
                    <fullName>025</fullName>
                    <label>25: Rear Screen</label>
                </value>
                <value>
                    <fullName>026</fullName>
                    <label>26: Rear Valence RHS</label>
                </value>
                <value>
                    <fullName>027</fullName>
                    <label>27: Rear Bumper RHS</label>
                </value>
                <value>
                    <fullName>028</fullName>
                    <label>28: Rear Quarter Panel RHS</label>
                </value>
                <value>
                    <fullName>029</fullName>
                    <label>29: Fuel Filler Surround</label>
                </value>
                <value>
                    <fullName>030</fullName>
                    <label>30: Rear Wheel Arch RHS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_Code__c</fullName>
        <label>Severity Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1: Small Defect</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2: Scratches and Dent</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3: Panel Replacement</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4: Sub-Standard</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5: Write Off</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6: Delivery/Transport Damage</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7: Repair</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8: Insurance Claim</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>9: Rework</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Damage_Description__c</fullName>
        <label>Damage Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>